Apply PR #116 manually.

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -648,6 +648,9 @@ fieldset.adr ul li input.label { margin-top: -4px !important; }
 	vertical-align: middle;
 	white-space: nowrap;
 }
+#contactlist tr > td:not(.name) {
+	padding-left:10px;
+}
 #contactlist tr > td:not(.tel):not(.adr):not(.actions) {
 	max-width: 270px;
 	min-width: 270px;
@@ -679,7 +682,7 @@ fieldset.adr ul li input.label { margin-top: -4px !important; }
 	position: absolute; float: right;  clear: none;
 	cursor:pointer;
 	width:16px; height:16px;
-	margin: 2px; z-index: 200;
+	margin: 2px 0 2px 5px; z-index: 200;
 	opacity: 0.6; background-image:url('%webroot%/core/img/actions/mail.svg');
 }
 #contactlist tbody > tr > td a.mailto:hover { opacity: 0.8; }
