--- a/css/contacts.css
+++ b/css/contacts.css
@@ -141,7 +141,10 @@
 /* First run */
 
 #firstrun {
-	position:absolute;
+	 height: 100%;
+}
+#firstrun > div {
+	position:relative;
 	left:50%; top:30%;
 	width: 50%;
 	transform:translate(-50%,-50%); -webkit-transform:translate(-50%,-50%);
