--- a/css/jquery.ocaddnew.css
+++ b/css/jquery.ocaddnew.css
@@ -20,85 +20,26 @@
  */
 
 .oc-addnew {
-	display: block !important;
-	padding: 0 !important;
+	background-image: none !important;
 }
-.oc-addnew li:first-child {
-	display: block;
-}
-.oc-addnew li:not(:first-child) {
-	display: none;
-}
-.oc-addnew.open li:first-child {
-	display: none;
-}
-.oc-addnew.open li:not(:first-child) {
-	display: block;
-}
-.oc-addnew > li {
-}
-.oc-addnew > li > a.oc-addnew-init {
-}
-.oc-addnew > li > a.oc-addnew-init:before {
-	content: '+';
-	font-weight: bold;
-	font-size: 180%;
-	padding-right: 5px;
+
+.oc-addnew li[display=list-item] {
 }
 
 .oc-addnew input[type=text] {
-	width: 120px !important;
-	margin-top: 15px;
-	height: 30px !important;
-}
-
-.oc-addnew select {
-	width: 133px;
-	margin-top: 1px !important;
-	height: 30px;
-	background-color: #eee;
-}
-
-.oc-addnew input,
-.oc-addnew select {
-	margin: 0 0 5px 0;
-	display: inline-block;
-	float: left;
-	border-top-right-radius: 0;
-	border-bottom-right-radius: 0;
-	border-right: 0;
+	width: 200px !important;
+	margin: 0px !important;
+	border-width: 0px;
+	height: 34px !important;
 }
 
 .oc-addnew button {
-	margin: 5px 0;
-	display: inline-block;
-	float: left;
-	border-bottom-left-radius: 0;
-	border-top-left-radius: 0;
-	height: 30px !important;
+	height: 34px !important;
+	margin: 0px !important;
+	border-width: 0px;
 }
-
-.oc-addnew .action-button {
-	width: 30px;
-	background-position: center;
-	background-repeat: no-repeat;	
-}
-
-.oc-addnew .back-button {
-	border-radius: 0;
-	background-image: url('%webroot%/core/img/actions/delete.svg');
-}
-
-.oc-addnew .new-button {
-	border-radius: 0;
-	background-image: url('%webroot%/core/img/add.svg');
-	border-top-right-radius: 5px; 
-	border-bottom-right-radius: 5px; 
-}
-
-.oc-addnew .create-button {
-	border-radius: 0;
-	background-image: url('%appswebroot%/contacts/img/checkmark-gray.svg');
-	border-top-right-radius: 5px; 
-	border-bottom-right-radius: 5px; 
+.oc-addnew button:hover {
+	height: 34px !important;
+	margin: 0px !important;
+	border-width: 0px;
 }
